--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -2,6 +2,8 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
 
+foo
+
 Test. Проверка. テスト ığüşöçİ ทดสอบ éphémère
 
 Here's a paragraph.
