--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -41,6 +41,11 @@ Suggestions of ideas for plugins:
 
 * rcs plugin ([[JeremyReed]] has one he has been using for over a month with over 850 web commits with 13 users with over ten commits each.)
 
+* asciidoc or txt2tags format plugins
+
+  Should be quite easy to write, the otl plugin is a good example of a
+  similar formatter.
+
 * manpage plugin: convert **"ls(1)"** style content into Markdown like **\[ls(1)\]\(http://example.org/man.cgi?name=ls&sect=1\)** or into HTML directly.
 > With a full installation of groff available, man offers HTML output.  Might
 > take some fiddling to make it fit into the ikiwiki templates, and you might
