--- a/doc/todo/spam_fighting.mdwn
+++ b/doc/todo/spam_fighting.mdwn
@@ -1,1 +1,4 @@
 Admins need the ability to block IP ranges. They can already ban users.
+
+See [[fileupload]] for a propsal that grew to encompass the potential to do
+this.
