--- a/debian/changelog
+++ b/debian/changelog
@@ -33,8 +33,9 @@ ikiwiki (1.44) UNRELEASED; urgency=low
     commitlock, which when locked by the CGI, disables the commit hook
     (except for commit mails). The CGI then takes care of the updates the
     commit hook would have done.
+  * French translation update. Closes: #411899
 
- -- Joey Hess <joeyh@debian.org>  Wed, 21 Feb 2007 03:35:52 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 21 Feb 2007 13:34:09 -0500
 
 ikiwiki (1.43) unstable; urgency=low
 
