web commit by JoshTriplett: ikiwiki could also support LaTeX as a document type, again rendering to HTML.

--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -8,6 +8,10 @@ of the ikiwiki [[/logo]].
 
 ----
 
+ikiwiki could also support LaTeX as a document type, again rendering to HTML.
+
+----
+
 Conversely, how about adding a plugin to support exporting to LaTeX?
 
 >> I did some tests with using Markdown and a customized HTML::Latex and html2latex
