--- a/doc/git.mdwn
+++ b/doc/git.mdwn
@@ -1,4 +1,6 @@
-Git is a distributed revison control system originally developed for the linux kernel. Ikiwiki supports storing a wiki in git.
+[[meta title="Git"]]
+
+[Git](http://git.or.cz) is a distributed revison control system originally developed for the Linux kernel. Ikiwiki supports storing a wiki in git.
 
 Ikiwiki can run as a post-update hook to update a wiki whenever commits
 come in. When running as a [[cgi]] with Git, ikiwiki automatically
