web commit by http://ethan.betacantrips.com/: moving comment over from [[patchqueue/move_page]]

--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -29,6 +29,8 @@ see [[commit-internals]].
 
 You browse and web-edit the wiki on W.
 
+W "belongs" to ikiwiki and should not be edited directly.
+
 
 ## [darcs](http://darcs.net/) (not yet included)
 
