* Patch from HenrikBrixAndersen to fix a broken use of foreach in the   search plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,8 +34,10 @@ ikiwiki (1.44) UNRELEASED; urgency=low
     (except for commit mails). The CGI then takes care of the updates the
     commit hook would have done.
   * French translation update. Closes: #411899
+  * Patch from HenrikBrixAndersen to fix a broken use of foreach in the
+    search plugin.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 21 Feb 2007 13:34:09 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri, 23 Feb 2007 14:34:18 -0500
 
 ikiwiki (1.43) unstable; urgency=low
 
