--- a/doc/bugs/Hyperestraier_search_plug-in_defective.mdwn
+++ b/doc/bugs/Hyperestraier_search_plug-in_defective.mdwn
@@ -47,3 +47,6 @@ The patch below fixes this issue:
                     } @_
             );
             estcfg();
+
+[[bugs/done]] ; thanks for the patch. Suprised it worked at all since the
+bad code was added (did it?) --[[Joey]]
