web commit by http://thuhn.myopenid.com/

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -32,3 +32,5 @@ Thanks! --[[Joey]]
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
 ikiwiki is developed by [[Joey]] and is [[FreeSoftware]].
+
+ikiwiki login is OpenID enabled and registered at ["The OpenID Directory"](http://openiddirectory.com)
