web commit by http://alecclews.myopenid.com/: A silly change

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -85,3 +85,7 @@ Testing a user page for [[users/kyle]]
 
 ----
 what happens if i edit something with an openid set?
+
+-----------
+
+So what's the point? How is this different to any other WiKi
