--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.44) UNRELEASED; urgency=low
+ikiwiki (1.44) unstable; urgency=low
 
   * Patch by Ben to fix validaton of atom feeds by fixing the category tags.
   * Add a openidlogin-bg.gif to wikiicons and have the stylesheet use it for the
@@ -43,7 +43,7 @@ ikiwiki (1.44) UNRELEASED; urgency=low
   * Some cleanup of field setting in the failed edit and conflict handling
     code.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 23 Feb 2007 19:26:46 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 24 Feb 2007 20:16:35 -0500
 
 ikiwiki (1.43) unstable; urgency=low
 
