--- a/doc/news/version_1.44.mdwn
+++ b/doc/news/version_1.44.mdwn
@@ -17,7 +17,7 @@ ikiwiki 1.44 released with [[toggle text="these changes"]]
      http://openid.net/login-bg.gif into their wiki.
    * Allow setting NOTAINT=1 when building the wiki to remove taint checking
      flags, which can be useful on some hosting providers.
-   * Fix a bug that made links like `[[0|foo]]` use "foo" as the link text,
+   * Fix a bug that made links like \[[0|foo]] use "foo" as the link text,
      instead of "0".
    * Changed calling convention for httmllink slightly. The first three
      parameters remain the same, but additional options are now passed in using
