web commit by JoshTriplett

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -88,4 +88,4 @@ what happens if i edit something with an openid set?
 
 -----------
 
-So what's the point? How is this different to any other WiKi
+So what's the point? [[How is this different to any other WiKi|features]]
