web commit by hb

--- a/doc/todo/Option_to_disable_date_footer_for_inlines.mdwn
+++ b/doc/todo/Option_to_disable_date_footer_for_inlines.mdwn
@@ -2,3 +2,5 @@
 post dates.  I'd like an option to omit the post dates as well, leaving only
 the page titles.  Such an option would streamline the [[/users]] page, for
 instance. --[[JoshTriplett]]
+    Yes, indeed, something like "compact" mode would be useful. --hb
+
