web commit by hb: more rationale on this

--- a/doc/todo/Option_to_disable_date_footer_for_inlines.mdwn
+++ b/doc/todo/Option_to_disable_date_footer_for_inlines.mdwn
@@ -2,5 +2,7 @@
 post dates.  I'd like an option to omit the post dates as well, leaving only
 the page titles.  Such an option would streamline the [[/users]] page, for
 instance. --[[JoshTriplett]]
-    Yes, indeed, something like "compact" mode would be useful. --hb
-
+> Yes, indeed, something like "compact" mode would be useful.
+> In fact, this would be better handled with a replacement of the "archive" on/off API with something like
+> mode = normal|archive|compact|.... defaulting to normal
+> --hb
